--- a/Operating Systems/Operating Systems.vcxproj
+++ b/Operating Systems/Operating Systems.vcxproj
@@ -80,11 +80,13 @@
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="Data.h" />
+    <ClInclude Include="UserInput.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="UserInput.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
